change test for task6